k8s-mediaserver/sabnzbd/sabnzbd_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8smediaserver-sample
      app.kubernetes.io/name: k8s-mediaserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sabnzbd
        app.kubernetes.io/instance: k8smediaserver-sample
        app.kubernetes.io/name: k8s-mediaserver
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: sabnzbd-config
        image: docker.io/linuxserver/sabnzbd:latest
        imagePullPolicy: Always
        name: k8s-mediaserver
        ports:
        - containerPort: 8080
          name: sabnzbd-http
          protocol: TCP
        - containerPort: 9090
          name: sabnzbd-https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: mediaserver-volume
          subPath: config/sabnzbd
        - mountPath: /downloads
          name: mediaserver-volume
          subPath: downloads
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mediaserver-volume
        persistentVolumeClaim:
          claimName: mediaserver-pvc-redux
      - configMap:
          defaultMode: 493
          name: init-sabnzbd-cm
        name: init-files-sabnzbd
