k8s-mediaserver/sabnzbd/sabnzbd_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: sabnzbd-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sabnzbd
  sessionAffinity: None
  type: ClusterIP
