k8s-mediaserver/sabnzbd/sabnzbd_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: 
    - websecure
  routes:
    - match: Host(`sabnzbd.local.izroll.dev`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
  tls:
    secretName: local-izroll-dev-tls
